# sc_helper

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
docs/: design.md
files/: com.scloud.helper.plist.tmpl  sc-helper.service.tmpl
src/: ipc.rs  lib.rs  paths.rs
src/service/: core.rs  dns.rs  dns_linux.rs  mod.rs  server.rs
tests/: integration_macos.rs
